Fix view buttons in dark mode

--- a/src/base/Form.css
+++ b/src/base/Form.css
@@ -36,10 +36,16 @@ input[type=submit], button, .button {
 }
 
 .button.inactive, button.inactive {
-  background: white;
+  background: var(--background);
   color: var(--primary);
   font-weight: normal;
   border: solid var(--primary) 2pt;
+}
+
+@media (prefers-color-scheme: dark) {
+  .button.inactive {
+    color: var(--foreground);
+  }
 }
 
 .button.inactive:active, button.inactive:active {
